--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
       "npm run lint",
       "npm run format"
     ],
+    "*.test.tsx": [
+      "npm run test:ci"
+    ],
     "*.+(json|css|md)": [
       "npm run format"
     ]
