--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
+    "msw": "^0.49.2",
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   },
