--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
-    "typescript-eslint": "^0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -72,5 +71,8 @@
     "*.+(json|css|md)": [
       "npm run format"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
