--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": ["./src/components/*"],
-      "@/*": ["./src/*"]
-    }
+    "baseUrl": "src"
   },
   "include": ["src"]
 }
