--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,7 +53,8 @@
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
+      },
+      "typescript": {}
     }
   }
 }
